# lmstudio-toolpack

./: .gitignore  1mcp.py  AGENTS.md  GlobalConfig.py  LICENSE  Memory.py  README.md  SYS_PROMPT_EXAMPLE.txt  WebSearch.py  main.py  pyproject.toml  python-sandbox.py  run_http.py
MCPs/: Memory.py  WebSearch.py  python-sandbox.py
tests/: test.py  test_run_http.py
