[project]
name = "lmstudio-toolpack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "fastmcp>=2.12.3",
    "numpy>=2.3.3",
    "starlette>=0.48.0",
    "sympy>=1.14.0",
    "yarl>=1.20.1",
]
